--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
 	    <div>
-	    	<header>Natasha V.'s 625 Site</header>
+	    	<h1>Natasha V.'s 625 Site</h1>
 	    </div>
 	    <div>
 	    	 <div class="navbar">
