--- a/page1.html
+++ b/page1.html
@@ -20,8 +20,11 @@
 	            </ul>
 	        </div>
 	    	<p>
-	    		This is the landing page for the 625 class site for the lab on Google Analytics.
+	    		This is Page 1. Click <a download="natasha_vazquez_lab_08.docx">here</a> to download the file for lab 8.
 	    	</p>
 	    </div>
 	</body>	
+	<footer>
+		<a href="index.html"> Home </a>
+	</footer>
 </html>
