--- a/page1.html
+++ b/page1.html
@@ -16,12 +16,10 @@
 	            <ul class="pages">
 	                <li class="nav"><a href="page1.html">Page 1</a></li>
 	                <li class="nav"><a href="page2.html">Page 2</a></li>
-	                <li class="nav"><a href="page3.html">Page 3</li>
+	                <li class="nav"><a href="page3.html">Page 3</a></li>
 	            </ul>
 	        </div>
-	    	<p>
-	    		This is Page 1. Click <a download="natasha_vazquez_lab_08.docx">here</a> to download the file for lab 8.
-	    	</p>
+	    	<p> This is Page 1. Click <a download="natasha_vazquez_lab_08.docx">here</a> to download the file for lab 8.</p>
 	    </div>
 	</body>	
 	<footer>
