--- a/page1.html
+++ b/page1.html
@@ -19,7 +19,7 @@
 	                <li class="nav"><a href="page3.html">Page 3</a></li>
 	            </ul>
 	        </div>
-	    	<p> This is Page 1. Click <a download="natasha_vazquez_lab_08.docx">here</a> to download the file for lab 8.</p>
+	    	<p> This is Page 1. Click <a href="natasha_vazquez_lab_08" download="natasha_vazquez_lab_08.docx">here</a> to download the file for lab 8.</p>
 	    </div>
 	</body>	
 	<footer>
