--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-	    <div class='h1'>
+	    <div class="h1">
 	    	<h1>Natasha V.'s 625 Site</h1>
 	    </div>
 	    <div>
