--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108710002-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+		  	function gtag(){dataLayer.push(arguments);}
+		  	gtag('js', new Date());
+		 	gtag('config', 'UA-108710002-1');
+		</script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>N. Vazquez</title>
@@ -8,7 +16,7 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-	    <div class="h1">
+	    <div class='h1'>
 	    	<h1>Natasha V.'s 625 Site</h1>
 	    </div>
 	    <div>
