--- a/page1.html
+++ b/page1.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>N. Vazquez</title>
-        <meta name="description" content="Natasha's website and portfolio.">
+        <meta name="description" content="Natasha's 625 site.">
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
