--- a/page2.html
+++ b/page2.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108710002-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+		  	function gtag(){dataLayer.push(arguments);}
+		  	gtag('js', new Date());
+		 	gtag('config', 'UA-108710002-1');
+		</script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>N. Vazquez</title>
-        <meta name="description" content="Natasha's website and portfolio.">
+        <meta name="description" content="Natasha's 625 site.">
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
