--- a/page3.html
+++ b/page3.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108710002-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+		  	function gtag(){dataLayer.push(arguments);}
+		  	gtag('js', new Date());
+		 	gtag('config', 'UA-108710002-1');
+		</script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>N. Vazquez</title>
-        <meta name="description" content="Natasha's website and portfolio.">
+        <meta name="description" content="Natasha's 625 site.">
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
@@ -19,7 +27,8 @@
 	                <li class="nav"><a href="page3.html">Page 3</a></li>
 	            </ul>
 	        </div>
-	    	<p> This is Page 3. Nothing else to see here.</p>
+	    	<p> This is Page 3. Here's a Python Turtle animation.</p>
+	    	<iframe src="https://trinket.io/embed/python/26c2de5c1d?outputOnly=true&runOption=run" width="100%" height="600" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 	</body>	
 	<footer>
 		<a href="index.html"> Home </a>
